

All notable changes to this project will be documented in this file.

== Format and Versioning Scheme

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog].

////

[[v0.0.0]]
== [0.0.0] -- 2020-00-00

.Added

.Changed

.Deprecated

.Removed

.Fixed

.Security

////


[[unreleased]]
== [unreleased]

{url-cl}0.4.0$$...$$main[Full Changelog]

.Added

////
.Changed

.Deprecated

.Removed

.Fixed

.Security

////

[[v0.4.0]]
== [0.4.0] -- 2022-10-09

{url-cl}0.3.3$$...$$0.4.0[Full Changelog]

.Changed
- Bumped gradle-wrapper, kotlin, coroutines, git-publish, detekt, junit-jupiter, spek, mockk,
  assertj, reckon, checkout, cache, setup-java

.Removed
- removed kordamp gradle plugins


[[v0.3.3]]
== [0.3.3] -- 2021-12-22

{url-cl}0.3.2$$...$$0.3.3[Full Changelog]

.Changed
- Bumped gradle-wrapper, kotlin, coroutines, mockk, rxjava, junit, kordamp-gradle-plugins, kluent, assertj


[[v0.3.2]]
== [0.3.2] -- 2021-03-28

{url-cl}0.3.1$$...$$0.3.2[Full Changelog]

.Changed
- Bumped gradle-wrapper, kotlin, coroutines, mockk, rxjava, junit, kordamp-gradle-plugins


[[v0.3.1]]
== [0.3.1] -- 2021-02-04

{url-cl}0.3.0$$...$$0.3.1[Full Changelog]

.Changed
- Bumped kotlin, gradle-wrapper, kotlin, kluent, spek, assertj, kordamp-gradle-plugins, couroutines, mockk
  spek


[[v0.3.0]]
== [0.3.0] -- 2020-11-07

{url-cl}0.2.6$$...$$0.3.0[Full Changelog]

.Added
- {url-issues}55[#45] Activated explicit api mode

.Changed
- Bumped gradle, rxjava2, kluent, assertj, coroutines, kordamp-gradle-plugins


[[v0.2.6]]
== [0.2.6] -- 2020-10-04

{url-cl}0.2.5$$...$$0.2.6[Full Changelog]

.Added
- Improved some kotlinDoc (RisTag)

.Changed
- Bumped gradle, kotlin, kordamp-gradle-plugins, gradle-wrapper, coroutines, junit, spekframework, assertj, mockk
- {url-issues}45[#45] Compile to Java 11

.Fixed
- Github action for publication


[[v0.2.5]]
== [0.2.5] -- 2020-06-07

{url-cl}0.2.3$$...$$0.2.5[Full Changelog]

.Added

.Changed